--- a/CreateGRIDTarget/CreateGRIDTargetUserControl.xaml
+++ b/CreateGRIDTarget/CreateGRIDTargetUserControl.xaml
@@ -61,7 +61,7 @@
                             <Label VerticalAlignment="Top" HorizontalAlignment="Right">Diameter of Grid:</Label>
                         </StackPanel>
                         <StackPanel Grid.Row="2" Grid.Column="1">
-                            <TextBox x:Name="TextBox_GridDiameter" Margin="15 0" Height="25" Width="75" HorizontalAlignment="Left" TextChanged="TextBox_GridDiameter_Changed"></TextBox>
+                            <TextBox x:Name="TextBox_GridDiameter" Margin="15 0" Height="25" Width="75" HorizontalAlignment="Left" VerticalContentAlignment="Center" TextChanged="TextBox_GridDiameter_Changed"></TextBox>
                         </StackPanel>
                         <StackPanel Grid.Row="2" Grid.Column="1">
                             <Label VerticalAlignment="Top" HorizontalAlignment="Left" Margin="89 0">mm</Label>
@@ -70,7 +70,7 @@
                             <Label VerticalAlignment="Top" HorizontalAlignment="Right">Separation of Grid:</Label>
                         </StackPanel>
                         <StackPanel Grid.Row="4" Grid.Column="1">
-                            <TextBox x:Name="TextBox_GridSeparation" Margin="15 0" Height="25" Width="75" HorizontalAlignment="Left" TextChanged="TextBox_GridSeparation_Changed"></TextBox>
+                            <TextBox x:Name="TextBox_GridSeparation" Margin="15 0" Height="25" Width="75" HorizontalAlignment="Left" VerticalContentAlignment="Center" TextChanged="TextBox_GridSeparation_Changed"></TextBox>
                         </StackPanel>
                         <StackPanel Grid.Row="4" Grid.Column="1">
                             <Label VerticalAlignment="Top" HorizontalAlignment="Left" Margin="89 0">mm</Label>
@@ -89,7 +89,7 @@
                                     <Label VerticalAlignment="Top" Margin="11 0" HorizontalAlignment="Left">X:</Label>
                                 </StackPanel>
                                 <StackPanel Grid.Column="0">
-                                    <TextBox x:Name="TextBox_GTVErodeMarginX" Margin="26 0" Height="25" Width="30" HorizontalAlignment="Left" TextChanged="TextBox_GTVErodeMarginX_Changed"></TextBox>
+                                    <TextBox x:Name="TextBox_GTVErodeMarginX" Margin="26 0" Height="25" Width="30" HorizontalAlignment="Left" VerticalContentAlignment="Center" TextChanged="TextBox_GTVErodeMarginX_Changed"></TextBox>
                                 </StackPanel>
                                 <StackPanel Grid.Column="0">
                                     <Label VerticalAlignment="Top" Margin="52,0,0,0" HorizontalAlignment="Left" Width="30">mm</Label>
@@ -98,7 +98,7 @@
                                     <Label VerticalAlignment="Top" Margin="0 0" HorizontalAlignment="Left">Y:</Label>
                                 </StackPanel>
                                 <StackPanel Grid.Column="1">
-                                    <TextBox x:Name="TextBox_GTVErodeMarginY" Margin="15 0" Height="25" Width="30" HorizontalAlignment="Left" TextChanged="TextBox_GTVErodeMarginY_Changed"></TextBox>
+                                    <TextBox x:Name="TextBox_GTVErodeMarginY" Margin="15 0" Height="25" Width="30" HorizontalAlignment="Left" VerticalContentAlignment="Center" TextChanged="TextBox_GTVErodeMarginY_Changed"></TextBox>
                                 </StackPanel>
                                 <StackPanel Grid.Column="1">
                                     <Label VerticalAlignment="Top" Margin="41,0,0,0" HorizontalAlignment="Left" Width="30">mm</Label>
@@ -107,7 +107,7 @@
                                     <Label VerticalAlignment="Top" Margin="0 0" HorizontalAlignment="Left">Z:</Label>
                                 </StackPanel>
                                 <StackPanel Grid.Column="2">
-                                    <TextBox x:Name="TextBox_GTVErodeMarginZ" Margin="15 0" Height="25" Width="30" HorizontalAlignment="Left" TextChanged="TextBox_GTVErodeMarginZ_Changed"></TextBox>
+                                    <TextBox x:Name="TextBox_GTVErodeMarginZ" Margin="15 0" Height="25" Width="30" HorizontalAlignment="Left" VerticalContentAlignment="Center" TextChanged="TextBox_GTVErodeMarginZ_Changed"></TextBox>
                                 </StackPanel>
                                 <StackPanel Grid.Column="2">
                                     <Label VerticalAlignment="Top" Margin="41,0,0,0" HorizontalAlignment="Left" Width="30">mm</Label>
@@ -118,7 +118,7 @@
                             <Label VerticalAlignment="Top" HorizontalAlignment="Right">Grid Pattern Rotation:</Label>
                         </StackPanel>
                         <StackPanel Grid.Row="8" Grid.Column="1">
-                            <TextBox x:Name="TextBox_GridRotation" Margin="15 0" Height="25" Width="75" HorizontalAlignment="Left" TextChanged="TextBox_GridRotation_Changed"></TextBox>
+                            <TextBox x:Name="TextBox_GridRotation" Margin="15 0" Height="25" Width="75" HorizontalAlignment="Left" VerticalContentAlignment="Center" TextChanged="TextBox_GridRotation_Changed"></TextBox>
                         </StackPanel>
                         <StackPanel Grid.Row="8" Grid.Column="1">
                             <Label VerticalAlignment="Top" HorizontalAlignment="Left" Width="100" Margin="89 0">Degrees</Label>
@@ -137,7 +137,7 @@
                                     <Label VerticalAlignment="Top" Margin="11 0" HorizontalAlignment="Left">X:</Label>
                                 </StackPanel>
                                 <StackPanel Grid.Column="0">
-                                    <TextBox x:Name="TextBox_GridShiftX" Margin="26 0" Height="25" Width="30" HorizontalAlignment="Left" TextChanged="TextBox_GridShiftX_Changed"></TextBox>
+                                    <TextBox x:Name="TextBox_GridShiftX" Margin="26 0" Height="25" Width="30" HorizontalAlignment="Left" VerticalContentAlignment="Center" TextChanged="TextBox_GridShiftX_Changed"></TextBox>
                                 </StackPanel>
                                 <StackPanel Grid.Column="0">
                                     <Label VerticalAlignment="Top" Margin="52,0,0,0" HorizontalAlignment="Left" Width="30">mm</Label>
@@ -146,7 +146,7 @@
                                     <Label VerticalAlignment="Top" Margin="0 0" HorizontalAlignment="Left">Z:</Label>
                                 </StackPanel>
                                 <StackPanel Grid.Column="1">
-                                    <TextBox x:Name="TextBox_GridShiftZ" Margin="15 0" Height="25" Width="30" HorizontalAlignment="Left" TextChanged="TextBox_GridShiftZ_Changed"></TextBox>
+                                    <TextBox x:Name="TextBox_GridShiftZ" Margin="15 0" Height="25" Width="30" HorizontalAlignment="Left" VerticalContentAlignment="Center" TextChanged="TextBox_GridShiftZ_Changed"></TextBox>
                                 </StackPanel>
                                 <StackPanel Grid.Column="1">
                                     <Label VerticalAlignment="Top" Margin="41,0,0,0" HorizontalAlignment="Left" Width="30">mm</Label>
