--- a/CreateGRIDTarget/CreateGRIDTargetUserControl.xaml
+++ b/CreateGRIDTarget/CreateGRIDTargetUserControl.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0">
-            <Image Source="pack://application:,,,/CreateGRIDTarget.esapi;component/Resources/Logo2.png" 
+            <Image Source="pack://application:,,,/CreateLatticeTarget.esapi;component/Resources/Logo2.png" 
                Height="75"
                />
         </StackPanel>
