--- a/CreateGRIDTarget/CreateGRIDTargetUserControl.xaml
+++ b/CreateGRIDTarget/CreateGRIDTargetUserControl.xaml
@@ -132,13 +132,43 @@
                             </Grid>
                         </StackPanel>
                         <StackPanel Grid.Row="12" Grid.Column="0">
-                            <Label VerticalAlignment="Top" HorizontalAlignment="Right">Lattice Pattern Rotation:</Label>
+                            <Label VerticalAlignment="Top" HorizontalAlignment="Right">Rotate Lattice About Axis:</Label>
                         </StackPanel>
                         <StackPanel Grid.Row="12" Grid.Column="1">
-                            <TextBox x:Name="TextBox_LatticeRotation" Margin="15 0" Height="25" Width="75" HorizontalAlignment="Left" VerticalContentAlignment="Center" TextChanged="TextBox_LatticeRotation_Changed"></TextBox>
-                        </StackPanel>
-                        <StackPanel Grid.Row="12" Grid.Column="1">
-                            <Label VerticalAlignment="Top" HorizontalAlignment="Left" Width="100" Margin="89 0">Degrees</Label>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="85"></ColumnDefinition>
+                                    <ColumnDefinition Width="75"></ColumnDefinition>
+                                    <ColumnDefinition Width="100"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <!--<StackPanel Grid.Column="0">
+                                    <Label VerticalAlignment="Top" Margin="11 0" HorizontalAlignment="Left">LR:</Label>
+                                </StackPanel>
+                                <StackPanel Grid.Column="0">
+                                    <TextBox x:Name="TextBox_LatticeRotationX" Margin="33 0 0 0" Height="25" Width="30" HorizontalAlignment="Left" VerticalContentAlignment="Center" TextChanged="TextBox_LatticeRotationX_Changed"></TextBox>
+                                </StackPanel>
+                                <StackPanel Grid.Column="0">
+                                    <Label VerticalAlignment="Top" Margin="59,0,0,0" HorizontalAlignment="Left" Width="30"><TextBlock Text="&#186;"/></Label>
+                                </StackPanel>
+                                <StackPanel Grid.Column="1">
+                                    <Label VerticalAlignment="Top" Margin="0 0" HorizontalAlignment="Left">AP:</Label>
+                                </StackPanel>
+                                <StackPanel Grid.Column="1">
+                                    <TextBox x:Name="TextBox_LatticeRotationY" Margin="23 0 0 0" Height="25" Width="30" HorizontalAlignment="Left" VerticalContentAlignment="Center" TextChanged="TextBox_LatticeRotationY_Changed"></TextBox>
+                                </StackPanel>
+                                <StackPanel Grid.Column="1">
+                                    <Label VerticalAlignment="Top" Margin="49,0,0,0" HorizontalAlignment="Left" Width="30"><TextBlock Text="&#186;"/></Label>
+                                </StackPanel>-->
+                                <StackPanel Grid.Column="2">
+                                    <Label VerticalAlignment="Top" Margin="0 0" HorizontalAlignment="Left">IS:</Label>
+                                </StackPanel>
+                                <StackPanel Grid.Column="2">
+                                    <TextBox x:Name="TextBox_LatticeRotationZ" Margin="19 0 0 0" Height="25" Width="30" HorizontalAlignment="Left" VerticalContentAlignment="Center" TextChanged="TextBox_LatticeRotationZ_Changed"></TextBox>
+                                </StackPanel>
+                                <StackPanel Grid.Column="2">
+                                    <Label VerticalAlignment="Top" Margin="45,0,0,0" HorizontalAlignment="Left" Width="30"><TextBlock Text="&#186;"/></Label>
+                                </StackPanel>
+                            </Grid>
                         </StackPanel>
                         <StackPanel Grid.Row="14" Grid.Column="0">
                             <Label VerticalAlignment="Top" HorizontalAlignment="Right">Lattice Pattern Shift:</Label>
